--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,12 @@ yarn-error.log
 
 # testing
 /coverage
+
+# env
+.env
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
