--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
+    "@react-navigation/stack": "^7.2.9",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/react-native": "^0.73.0",
     "@types/socket.io-client": "^3.0.0",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.43",
+    "expo-constants": "^17.0.8",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
-    "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1",
-    "react-dom": "18.3.1",
+    "react-native-tab-view": "^4.0.9",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
